@@ -88,6 +88,6 @@
 </div>
 {% endblock %}
 {% block includes %}
-<script type = "text/javascript" src = "{{ url_for('static', filename = 'scripts.js') }}" ></script>
-<script type = "text/javascript" src = "{{ url_for('static', filename = 'nameGenerator.js') }}" ></script>
+<script type = "text/javascript" src = "{{ url_for('static', filename = 'weaponGen.js') }}" ></script>
+<script type = "text/javascript" src = "{{ url_for('static', filename = 'nameGen.js') }}" ></script>
 {% endblock %}
